--- a/TechnologyOneTest/Views/Home/Index.cshtml
+++ b/TechnologyOneTest/Views/Home/Index.cshtml
@@ -9,14 +9,14 @@
 
 
 
-<div class="card text-bg-dark">
+<div class="card" style="background-color:#f5f5f5;">
     <div class="card-header text-center">
         Number to Words Converter
     </div>
     <div class="card-body">
         
-        <div class="input-group">
-            <input type="text" class="form-control" maxlength="64" id="number_input" placeholder="Number to Convert eg. 12345" />
+        <div class="input-group" style="background-color:white;">
+            <input type="text" class="form-control" maxlength="70" id="number_input" placeholder="Number to Convert eg. 12345" />
             <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Settings</button>
             <ul class="dropdown-menu dropdown-menu-end">
                 <li><a class="dropdown-item" id="link_currency" href="#">Number is Currency Disabled</a></li>
@@ -25,7 +25,7 @@
             <button type="button" id="number_submit" class="btn btn-outline-primary">Convert</button>
         </div>
         <div class="p-0 m-1 text-end setting-change text-muted small">&nbsp;</div>
-        <div class="alert alert-primary mt-2 text-center" role="alert" style="display:none;">
+        <div class="alert alert-primary pt-2 mt-2 text-center" role="alert" style="display:none;">
             
         </div>
     </div>
@@ -42,9 +42,18 @@
         }
 
         body > div.container {
-            height:calc(100% - 100px);
+            flex-grow:1;
+                border-left: 1px solid #bcbcbc;
+                border-right: 1px solid #bcbcbc;
+                background-color:white;
+                box-shadow: 0px 0px 12px 2px #878787;
         }
-
+        footer {
+            width: 100%;
+            height: 60px;
+            line-height: 60px;
+            overflow: hidden;
+        }
 
         div.card {
             background-color: #e5e5e5;
@@ -132,12 +141,15 @@
                         // Check if input has changed or it auto submit is off
                         if ((!auto_submit) || (data.value == $('input#number_input').val()) || (data.currency != currency)) {
                             const content = await response.json();
-                            a.text(content.message);
+                            var h = '';
                             if (content.valid) {
                                 a.removeClass('alert-danger').addClass('alert-primary');
+                                h = '<div class="fw-bold text-start small">Output : </div><div>' + content.message + '</div>';
                             } else {
                                 a.removeClass('alert-primary').addClass('alert-danger');
+                                h = '<div class="fw-bold text-start small">Error : </div><div>' + content.message + '</div>';
                             }
+                            a.html(h);
                             a.removeClass('alert-info');
                             a.show();
                         }
@@ -159,7 +171,6 @@
                 }
                 
                 if (e.which >= 48 && e.which <= 57) {
-                    // Numbers
                     if (!e.shiftKey) {
                         return true;
                     }
@@ -169,20 +180,22 @@
                 }
                 if (e.which >= 37 && e.which <= 40) {
                     if (!e.shiftKey) {
-                        // Numbers
                         return true;
                     }
                 }
                 // . If they've already put in a decimal place, prevent them from putting in another
-                if (e.which == 190) { 
+                if (e.which == 190 || e.which == 110) {
                     if (current.indexOf('.') < 0) { 
                         return true;
                     }
                 }
 
-                if (e.which == 189) { 
-                    if (empty) { 
-                        return true;
+                // Negative
+                if (e.which == 189 || e.which == 109) {
+                    if (!e.shiftKey) {
+                        if (empty) {
+                            return true;
+                        }
                     }
                 }
                 // Basic comma limiting, prevent from 2 next to each other ( they're ignored anyway )
@@ -192,6 +205,15 @@
                             return true;
                         }
                     }
+                }
+                // F1 to F12
+                if (e.which >= 112 && e.which <= 123) { 
+                    return true;
+                }
+
+                // Number Pad
+                if ((e.which >= 96 && e.which <= 105)) {
+                    return true;
                 }
                 return false;
 
