--- a/TechnologyOneTest/Views/Shared/_Layout.cshtml
+++ b/TechnologyOneTest/Views/Shared/_Layout.cshtml
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="~/TechnologyOneTest.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-black border-bottom box-shadow mb-3">
+    <header class="w-100">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-black border-bottom box-shadow">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Technology One Technical Test</a>
    @*              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -31,12 +31,12 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" class="p-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted bg-black ">
         <div class="container text-center">
             &copy; 2024 - Ryan Dodd 
         </div>
